+Height fixed in all pages +Signature pad height fixed and button hiden on iOS

--- a/app/app.scss
+++ b/app/app.scss
@@ -414,6 +414,11 @@ search-bar{
 
 /* SIZE */
 
+.fill-all{
+    height: 100%;
+    height: 100%;
+}
+
 .fill-width{
     width: 100%;
 }
